# ShopBot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  strapi.py  strapi_class_api.py  strapi_dataclasses.py
callbackdata_factory/: callbacks.py
commands/: command_menu.py
handlers/: shop.py  start.py
keyboards/: inline_keyboards.py  reply_keyboards.py
middliware/: strapi_middleware.py
