[tool.poetry]
name = "fishshopbot"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <pavelmazikinvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aiogram = "^3.1.1"
requests = "^2.31.0"
pydantic = "^2.5.2"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


